# jag_brs

./:  TESTS.md  Analysis.py  CONDUCT.md  LICENSE  README.md  pyproject.toml  test_Analysis.py
configs/: tc_config.yml
test_package/: tc_config.yml  test_package.py
