[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Analysis"
authors = [
    {name = "Prasanna Jagannathan", email = "noemail@nomail.com"},
]
description = "Jag BRS Analysis package"
version = "0.1.0"
dependencies = ["matplotlib", "numpy"]
requires-python = ">=3.11.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

